[package]
name = "michael_ai_chat_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version="2.6.2", optional = true}

[features]
default = ["dadjokes"]
dadjokes = ["dep:ureq"]

[[bin]]
name = "michael_ai_chat_bot"
path = "main.rs"
